--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Run Tracker</title>
 <style>
-  :root { --bg:#f5f5f5; --card:#fff; --text:#111; --muted:#666; --brand:#007bff; --brand-d:#0056b3; }
+  :root { --bg:#f5f5f5; --card:#fff; --text:#111; --muted:#666; --brand:#0b67ff; --brand-d:#0852c7; }
   * { box-sizing: border-box; }
   body { font-family: Arial, sans-serif; background: var(--bg); color: var(--text); margin: 20px; }
   h1 { text-align: center; margin-bottom: 16px; }
@@ -15,7 +15,8 @@
   input, select, button { padding: 8px 10px; border: 1px solid #ccc; border-radius: 6px; }
   input:focus, select:focus, button:focus { outline: none; border-color: var(--brand); }
   button { border: 1px solid transparent; background: var(--brand); color: #fff; cursor: pointer; }
-  button:hover { background: var(--brand-d); }
+  button:disabled { opacity: .6; cursor: not-allowed; }
+  button:hover:not(:disabled) { background: var(--brand-d); }
   .btn-secondary { background: #eee; color: #111; border-color: #ddd; }
   .row { display: flex; gap: 10px; flex-wrap: wrap; }
   .row > * { flex: 1 1 220px; }
@@ -26,12 +27,9 @@
   .muted { color: var(--muted); }
   .toast { position: fixed; right: 16px; bottom: 16px; background: #222; color: #fff; padding: 10px 14px; border-radius: 8px; opacity: 0; transform: translateY(8px); transition: .25s; }
   .toast.show { opacity: 1; transform: translateY(0); }
-
-  /* Modal (time picker) */
   .modal-backdrop { position: fixed; inset: 0; background: rgba(0,0,0,.35); display: none; align-items: center; justify-content: center; z-index: 50; }
   .modal-backdrop.show { display: flex; }
   .modal { background: #fff; width: min(520px, 92vw); border-radius: 12px; box-shadow: 0 10px 30px rgba(0,0,0,.25); padding: 16px; }
-  .modal h3 { margin: 0 0 10px 0; }
   .picker-grid { display: grid; grid-template-columns: auto 1fr auto 1fr auto 1fr; gap: 8px; align-items: center; }
   .picker-grid select { font-size: 18px; padding: 8px 10px; height: 44px; }
   .colon { font-size: 20px; font-weight: 700; }
@@ -46,7 +44,6 @@
 <h1>Run Tracker</h1>
 
 <div class="wrap">
-  <!-- Add Run -->
   <div class="card">
     <form id="runForm" aria-label="Add new run">
       <div class="row">
@@ -61,79 +58,57 @@
         <label>Distance (km):
           <input type="number" id="distance" step="0.01" min="0.01" placeholder="e.g. 5" required />
         </label>
-
-        <!-- Rolling Time Picker trigger + display -->
         <label>Time (duration):
           <span class="display-chip">
-            <code id="timeDisplay">00:25:00</code>
+            <code id="timeDisplay">--:--:--</code>
             <button id="openTimePicker" type="button" class="btn-secondary">Pick Time</button>
           </span>
-          <input type="hidden" id="time" value="00:25:00" />
+          <input type="hidden" id="time" value="" />
         </label>
       </div>
       <div class="row">
-        <button type="submit">Add Run</button>
+        <button id="submitBtn" type="submit" disabled>Add Run</button>
         <span class="muted" id="status" aria-live="polite"></span>
       </div>
     </form>
   </div>
 
-  <!-- Filters -->
   <div class="card">
     <div class="row">
       <label for="filterSelect">Filter by Name:
-        <select id="filterSelect">
-          <option value="">-- All Names --</option>
-        </select>
+        <select id="filterSelect"><option value="">-- All Names --</option></select>
       </label>
       <button id="refreshBtn" type="button" style="max-width:160px">Refresh</button>
     </div>
   </div>
 
-  <!-- Past Activities -->
   <div class="card">
     <h2>Past Activities</h2>
     <div class="table-wrap">
       <table aria-live="polite">
-        <thead>
-          <tr>
-            <th>Date</th><th>Name</th><th>Distance (km)</th><th>Time</th><th>Pace (min/km)</th>
-          </tr>
-        </thead>
+        <thead><tr><th>Date</th><th>Name</th><th>Distance (km)</th><th>Time</th><th>Pace (min/km)</th></tr></thead>
         <tbody id="activitiesTable"></tbody>
       </table>
     </div>
   </div>
 
-  <!-- Leaderboard -->
   <div class="card">
     <h2>Leaderboard</h2>
     <div class="table-wrap">
       <table aria-live="polite">
-        <thead>
-          <tr><th>Name</th><th>Total Distance (km)</th><th>Total Time</th><th>Badge</th></tr>
-        </thead>
+        <thead><tr><th>Name</th><th>Total Distance (km)</th><th>Total Time</th><th>Badge</th></tr></thead>
         <tbody id="leaderboardTable"></tbody>
       </table>
     </div>
-  </div>
-
-  <!-- Support -->
-  <div class="card" style="text-align:center">
-    <h3>Support this App</h3>
-    <form action="https://www.paypal.com/donate" method="post" target="_top">
-      <input type="hidden" name="hosted_button_id" value="WYBRQ9EGCMK4Y" />
-      <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="Donate with PayPal button" style="max-width:100%;height:auto;" />
-    </form>
   </div>
 </div>
 
 <div id="toast" class="toast" role="status" aria-live="polite"></div>
 
-<!-- Time Picker Modal (MM:SS with optional HH) -->
+<!-- Time picker modal -->
 <div id="timeModal" class="modal-backdrop" aria-hidden="true">
-  <div class="modal" role="dialog" aria-modal="true" aria-labelledby="timeTitle">
-    <h3 id="timeTitle">Select Duration</h3>
+  <div class="modal" role="dialog" aria-modal="true">
+    <h3>Select Duration</h3>
     <div class="picker-grid">
       <label class="hide" id="labelH">H
         <select id="tpHours" aria-label="Hours"></select>
@@ -161,10 +136,9 @@
 </div>
 
 <script>
-/* ===== Config (Vercel) ===== */
 const scriptUrl = "/api/proxy";
 
-/* ===== DOM ===== */
+/* DOM */
 const runForm = document.getElementById("runForm");
 const activitiesTable = document.getElementById("activitiesTable");
 const leaderboardTable = document.getElementById("leaderboardTable");
@@ -172,8 +146,9 @@ const filterSelect = document.getElementById("filterSelect");
 const statusEl = document.getElementById("status");
 const refreshBtn = document.getElementById("refreshBtn");
 const toastEl = document.getElementById("toast");
+const submitBtn = document.getElementById("submitBtn");
 
-/* Time widgets */
+/* time widgets */
 const timeHidden = document.getElementById("time");
 const timeDisplay = document.getElementById("timeDisplay");
 const openTimePicker = document.getElementById("openTimePicker");
@@ -187,198 +162,134 @@ const enableHours = document.getElementById("enableHours");
 const labelH = document.getElementById("labelH");
 const colonH = document.getElementById("colonH");
 
-/* ===== Utils ===== */
-function toast(msg) {
-  toastEl.textContent = msg; toastEl.classList.add("show");
-  setTimeout(() => toastEl.classList.remove("show"), 2200);
-}
-function pad2(n){ return String(n).padStart(2,"0"); }
-function normalizeTimeStr(t) {
-  if (!t) return "00:00:00";
-  const s = String(t).trim();
+/* utils */
+function toast(m){ toastEl.textContent=m; toastEl.classList.add("show"); setTimeout(()=>toastEl.classList.remove("show"),2000); }
+const pad2 = n => String(n).padStart(2,"0");
+function normalizeTimeStr(t){
+  if(!t) return "";
+  const s=String(t).trim();
   if (s.includes("T")) return s.split("T")[1].slice(0,8);
   if (/^\d{1,2}:[0-5]\d$/.test(s)) return `00:${s}`;
-  if (/^\d{1,2}:[0-5]\d:[0-5]\d$/.test(s)) {
-    const [h,m,ss] = s.split(":");
-    return `${pad2(h)}:${m}:${ss}`;
-  }
+  if (/^\d{1,2}:[0-5]\d:[0-5]\d$/.test(s)) { const [h,m,ss]=s.split(":"); return `${pad2(h)}:${m}:${ss}`; }
   return s;
 }
 function timeToSeconds(t){
   const s = normalizeTimeStr(t);
-  const [h,m,ss] = s.split(":").map(Number);
-  if ([h,m,ss].some(n => Number.isNaN(n))) return 0;
-  return h*3600 + m*60 + ss;
+  if (!s) return 0;
+  const [h,m,ss]=s.split(":").map(Number);
+  if ([h,m,ss].some(isNaN)) return 0;
+  return h*3600+m*60+ss;
 }
-function secondsToHMS(sec){
-  const h = Math.floor(sec/3600);
-  const m = Math.floor((sec%3600)/60);
-  const s = Math.floor(sec%60);
-  return [h,m,s].map(pad2).join(":");
-}
-function calcPace(distanceKm, timeStr){
-  const secs = timeToSeconds(timeStr);
-  if (!distanceKm || distanceKm <= 0 || secs <= 0) return "-";
-  const pace = secs / distanceKm;
-  const m = Math.floor(pace/60);
-  const s = Math.round(pace % 60);
-  return `${m}:${pad2(s)}`;
-}
-function getBadge(km) {
-  if (km >= 42.2) return "🏅 Marathon";
-  if (km >= 21.1) return "🥈 Half";
-  if (km >= 10) return "🥉 10K";
-  return "";
-}
-function formatDate(dateStr) { return dateStr && dateStr.includes("T") ? dateStr.split("T")[0] : (dateStr||""); }
+function secondsToHMS(sec){ const h=Math.floor(sec/3600), m=Math.floor((sec%3600)/60), s=Math.floor(sec%60); return [h,m,s].map(pad2).join(":"); }
+function calcPace(km, t){ const s=timeToSeconds(t); if (!km || s<=0) return "-"; const spk=s/km; const m=Math.floor(spk/60), ss=Math.round(spk%60); return `${m}:${pad2(ss)}`; }
+function getBadge(km){ if (km>=42.2) return "🏅 Marathon"; if (km>=21.1) return "🥈 Half"; if (km>=10) return "🥉 10K"; return ""; }
+function formatDate(d){ return d && d.includes("T") ? d.split("T")[0] : (d||""); }
 
-/* ===== Time Picker ===== */
+/* picker */
 function buildTimeOptions(){
-  tpHours.innerHTML = ""; tpMinutes.innerHTML = ""; tpSeconds.innerHTML = "";
-  for (let h=0; h<=23; h++){ const o = document.createElement("option"); o.value = pad2(h); o.textContent = pad2(h); tpHours.appendChild(o); }
-  for (let m=0; m<=59; m++){
-    const o1 = document.createElement("option"); o1.value = pad2(m); o1.textContent = pad2(m); tpMinutes.appendChild(o1);
-    const o2 = document.createElement("option"); o2.value = pad2(m); o2.textContent = pad2(m); tpSeconds.appendChild(o2);
+  tpHours.innerHTML=""; tpMinutes.innerHTML=""; tpSeconds.innerHTML="";
+  for(let h=0; h<=23; h++){ const o=document.createElement("option"); o.value=pad2(h); o.textContent=pad2(h); tpHours.appendChild(o); }
+  for(let m=0; m<=59; m++){
+    const o1=document.createElement("option"); o1.value=pad2(m); o1.textContent=pad2(m); tpMinutes.appendChild(o1);
+    const o2=document.createElement("option"); o2.value=pad2(m); o2.textContent=pad2(m); tpSeconds.appendChild(o2);
   }
 }
-function setHoursUI(enabled){ [labelH, colonH].forEach(el => el.classList.toggle("hide", !enabled)); if (!enabled) tpHours.value = "00"; }
+function setHoursUI(on){ [labelH,colonH].forEach(el=>el.classList.toggle("hide",!on)); if(!on) tpHours.value="00"; }
 function openPicker(){
-  const [h,m,s] = normalizeTimeStr(timeHidden.value || "00:25:00").split(":");
-  tpHours.value = h; tpMinutes.value = m; tpSeconds.value = s;
+  const base = timeHidden.value || "00:00:00";
+  const [h,m,s]=normalizeTimeStr(base).split(":");
+  tpHours.value=h; tpMinutes.value=m; tpSeconds.value=s;
   timeModal.classList.add("show"); timeModal.setAttribute("aria-hidden","false");
 }
 function closePicker(){ timeModal.classList.remove("show"); timeModal.setAttribute("aria-hidden","true"); }
 openTimePicker.addEventListener("click", openPicker);
 tpCancel.addEventListener("click", closePicker);
-timeModal.addEventListener("click", (e)=>{ if (e.target === timeModal) closePicker(); });
+timeModal.addEventListener("click", e=>{ if(e.target===timeModal) closePicker(); });
 tpSet.addEventListener("click", ()=>{
-  const hours = enableHours.checked ? tpHours.value : "00"; // force HH=00 if toggle off
-  const value = `${hours}:${tpMinutes.value}:${tpSeconds.value}`;
-  timeHidden.value = value;
-  timeDisplay.textContent = value;
+  const hours = enableHours.checked ? tpHours.value : "00";
+  const val = `${hours}:${tpMinutes.value}:${tpSeconds.value}`;
+  timeHidden.value = val;
+  timeDisplay.textContent = val;
+  submitBtn.disabled = false; // time chosen
   closePicker();
 });
 enableHours.addEventListener("change", ()=> setHoursUI(enableHours.checked));
-buildTimeOptions();
-setHoursUI(false); // default: minutes+seconds only
+buildTimeOptions(); setHoursUI(false);
 
-/* ===== Data Fetch ===== */
+/* fetch + render */
 async function fetchActivities(){
-  statusEl.textContent = "Loading…";
-  try {
-    const res = await fetch(scriptUrl, { cache: "no-store" });
-    const activities = await res.json();
+  statusEl.textContent="Loading…";
+  try{
+    const res = await fetch(scriptUrl,{ cache:"no-store" });
+    const items = await res.json();
 
-    // Build filter dropdown
+    // filter names
     const prev = filterSelect.value;
     filterSelect.innerHTML = '<option value="">-- All Names --</option>';
-    [...new Set(activities.map(r => r.name).filter(Boolean))].sort()
-      .forEach(name => {
-        const opt = document.createElement("option");
-        opt.value = name; opt.textContent = name;
-        if (name === prev) opt.selected = true;
-        filterSelect.appendChild(opt);
-      });
-
-    const filter = filterSelect.value.trim().toLowerCase();
-    const filtered = filter ? activities.filter(r => (r.name || "").toLowerCase() === filter) : activities;
-
-    // Activities
-    activitiesTable.innerHTML = "";
-    if (filtered.length === 0) {
-      activitiesTable.innerHTML = "<tr><td colspan='5' class='muted'>No runs yet</td></tr>";
-    } else {
-      filtered.forEach(r => {
-        const date = formatDate(r.date);
-        const dist = parseFloat(String(r.distance).replace(",", ".")) || 0;
-        const time = normalizeTimeStr(r.time || "");
-        const pace = r.pace || calcPace(dist, time);
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${date}</td>
-          <td>${r.name || ""}</td>
-          <td>${dist ? dist.toFixed(2) : ""}</td>
-          <td>${time || ""}</td>
-          <td>${pace}</td>`;
-        activitiesTable.appendChild(tr);
-      });
-    }
-
-    // Leaderboard
-    const summary = {};
-    activities.forEach(r => {
-      const name = r.name || "";
-      const dist = parseFloat(String(r.distance).replace(",", ".")) || 0;
-      const secs = timeToSeconds(r.time);
-      if (!summary[name]) summary[name] = { dist: 0, secs: 0 };
-      summary[name].dist += dist;
-      summary[name].secs += secs;
+    [...new Set(items.map(x=>x.name).filter(Boolean))].sort().forEach(n=>{
+      const o=document.createElement("option"); o.value=n; o.textContent=n; if(n===prev) o.selected=true; filterSelect.appendChild(o);
     });
-    const sorted = Object.entries(summary).filter(([n])=>n).sort((a,b)=>b[1].dist - a[1].dist);
-    leaderboardTable.innerHTML = "";
-    if (sorted.length === 0) {
-      leaderboardTable.innerHTML = "<tr><td colspan='4' class='muted'>No runners yet</td></tr>";
-    } else {
-      sorted.forEach(([name, vals]) => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td>${name}</td>
-          <td>${vals.dist.toFixed(2)}</td>
-          <td>${secondsToHMS(vals.secs)}</td>
-          <td>${getBadge(vals.dist)}</td>`;
-        leaderboardTable.appendChild(tr);
-      });
-    }
-  } catch (err) {
-    console.error(err);
-    toast("Failed to load activities");
-  } finally {
-    statusEl.textContent = "";
-  }
+    const f = filterSelect.value.trim().toLowerCase();
+    const rows = f ? items.filter(r => (r.name||"").toLowerCase()===f) : items;
+
+    // activities
+    activitiesTable.innerHTML="";
+    if(!rows.length){ activitiesTable.innerHTML="<tr><td colspan='5' class='muted'>No runs yet</td></tr>"; }
+    else rows.forEach(r=>{
+      const dist = parseFloat(String(r.distance).replace(',','.'))||0;
+      const time = normalizeTimeStr(r.time||"");
+      const pace = r.pace || calcPace(dist,time);
+      const tr=document.createElement("tr");
+      tr.innerHTML = `<td>${formatDate(r.date)}</td><td>${r.name||""}</td><td>${dist?dist.toFixed(2):""}</td><td>${time}</td><td>${pace}</td>`;
+      activitiesTable.appendChild(tr);
+    });
+
+    // leaderboard
+    const agg={};
+    items.forEach(r=>{
+      const n=r.name||""; const d=parseFloat(String(r.distance).replace(',','.'))||0; const s=timeToSeconds(r.time);
+      if(!agg[n]) agg[n]={dist:0,secs:0}; agg[n].dist+=d; agg[n].secs+=s;
+    });
+    const sorted = Object.entries(agg).filter(([n])=>n).sort((a,b)=>b[1].dist-a[1].dist);
+    leaderboardTable.innerHTML = sorted.length ? "" : "<tr><td colspan='4' class='muted'>No runners yet</td></tr>";
+    sorted.forEach(([n,v])=>{
+      const tr=document.createElement("tr");
+      tr.innerHTML=`<td>${n}</td><td>${v.dist.toFixed(2)}</td><td>${secondsToHMS(v.secs)}</td><td>${getBadge(v.dist)}</td>`;
+      leaderboardTable.appendChild(tr);
+    });
+
+  }catch(e){ console.error(e); toast("Failed to load"); }
+  finally{ statusEl.textContent=""; }
 }
 
-/* ===== Submit Handler ===== */
-runForm.addEventListener("submit", async (e) => {
+/* submit */
+runForm.addEventListener("submit", async e=>{
   e.preventDefault();
+  const timeVal = normalizeTimeStr(timeHidden.value);
+  if(!timeVal){ toast("Pick a time"); return; }
 
-  const data = {
+  const payload = {
     date: document.getElementById("date").value,
     name: document.getElementById("name").value.trim(),
     distance: document.getElementById("distance").value,
-    time: normalizeTimeStr(timeHidden.value),        // always HH:MM:SS
-    hoursEnabled: enableHours.checked === true       // tell server if hours were intended
+    time: timeVal,
+    hoursEnabled: enableHours.checked === true
   };
 
-  try {
-    const resp = await fetch(scriptUrl, {
-      method: "POST",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(data),
-      cache: "no-store"
-    });
+  try{
+    const resp = await fetch(scriptUrl,{ method:"POST", headers:{ "Content-Type":"application/json" }, body: JSON.stringify(payload), cache:"no-store" });
     const json = await resp.json().catch(()=>({}));
-    if (!resp.ok || json.ok === false) {
-      const msg = (json && (json.error || json.details)) || `Save failed (HTTP ${resp.status})`;
-      console.error("Save error:", json);
-      toast("Could not save: " + msg);
-      return;
-    }
+    if(!resp.ok || json.ok===false){ console.error("Save error:",json); toast("Could not save"); return; }
 
     runForm.reset();
-    timeHidden.value = "00:25:00"; timeDisplay.textContent = "00:25:00";
+    timeHidden.value=""; timeDisplay.textContent="--:--:--"; submitBtn.disabled=true; setHoursUI(false);
     toast("Run added");
     await fetchActivities();
-  } catch (err) {
-    console.error(err);
-    toast("Network error while saving");
-  }
+  }catch(err){ console.error(err); toast("Network error"); }
 });
 
-/* ===== Interactions ===== */
 filterSelect.addEventListener("change", fetchActivities);
 refreshBtn.addEventListener("click", fetchActivities);
-
-/* ===== Initial Load ===== */
 fetchActivities();
 </script>
 </body>
